fix character skin icon on small screen

--- a/css/akchardetail.css
+++ b/css/akchardetail.css
@@ -1572,6 +1572,10 @@ body {
         box-shadow: 2px 2px 8px #111;
     }
 
+    .skinimage{
+        max-width: 38px !important;
+        max-height: 38px !important;
+    }
     .opresult-grid{
         max-width:100%;
     }
@@ -1660,7 +1664,7 @@ body {
     }
     
     .chara-detail-container .tabbing-btns {
-        height: 50px;
+        height: 40px;
         width: 40px;
         /* padding: 10px 0px; */
     }
